# interview

./: .gitignore  CLAUDE.md  Makefile  PLAN_GAME_FRAMEWORK.md  README.md  pyproject.toml
.claude/plans/: eager-splashing-treasure.md
cli/: main.py
experiments/_archive/: extract_data.py  pilot_bargain_1s_notalk.md
experiments/info_precision_bargaining/: design.tex  hypothesis.tex  manifest.toml  results.tex
experiments/info_precision_bargaining_v2/: design.tex  hypothesis.tex  manifest.toml  results.tex
experiments/info_source_bargaining/: design.tex  hypothesis.tex  results.tex
experiments/vickrey_competition/: design.md  hypothesis.md  manifest.toml  results.md
experiments/vickrey_competition_v2/: design.md  hypothesis.md  manifest.toml  results.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
games/: DESIGN_NOTES.md  TEMPLATE_CONFIG.md  TEMPLATE_MANAGER.md  TEMPLATE_PLAYER.md
games/auction/: config.toml  manager.md  player.md  sim_human.md
games/auction_2bidder/: config.toml  manager.md  (+2 more)
interviewer/: __init__.py  checker.py  core.py  defaults.py  game.py  game_defaults.py  game_logging.py  game_models.py  game_runner.py  logging.py  models.py  player.py  randomization.py  respondent.py  simulation.py
prompts/: checker.md  interviewer_default.md  respondent_default.md
server/: app.py  game_routes.py  game_session.py  routes.py  session.py
tests/: test_checker.py  test_core.py  test_game.py  test_game_logging.py  test_game_runner.py  test_logging.py  test_models.py  test_randomization.py
(+189 files in other folders)
